--- a/style.css
+++ b/style.css
@@ -7,3 +7,19 @@ h1 {
     border: 1px solid black;
     width: 500px;
 }
+.loading {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 10px solid red;
+    border-top: 10px solid darkred;
+    animation: spinning 5s linear infinite;
+}
+@keyframes spinning {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
